--- a/EMP/manager/styles.css
+++ b/EMP/manager/styles.css
@@ -1,9 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
     font-family: 'Franklin Gothic Normal', 'Arial Narrow', Arial, sans-serif;
 }
@@ -17,8 +11,6 @@ html {
     justify-content: space-around;
     margin-bottom: 20px;
 }
-
-
 
 
 .filter-bar button {
@@ -134,18 +126,41 @@ html {
 
 /* ------------------------------------------ */
 
-.details {
+.employee-card {
     background-color: #f8f7f7dc;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 20px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
+    box-shadow: 0px 1px 2px 0px #d8d8d8;    
 }
 
-.employee-list {
+.details{
+    background-color: #f8f7f7dc;
+    border: none;
+    margin-bottom: 20px;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    box-shadow: 0px 1px 2px 0px #d8d8d8; 
+}
+
+.employee {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+.employee-filter-section {
+    margin: 2%;
+    align-items: end;
+    text-align: end;
+}
+
+.employee-list, .project-list, .manager-list {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
