--- a/webPage/admin/styles.css
+++ b/webPage/admin/styles.css
@@ -1,7 +1,10 @@
+/* -----------Whole Html--------------------- */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 body {
@@ -12,6 +15,31 @@ html {
     scroll-behavior: smooth;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h3 {
+    font-size: 1.3rem;
+    margin-bottom: 1.3%;
+    font-weight: 700;
+}
+
+/* ----------------Card-Container---------------- */
+
+.card {
+    background-color: #f8f7f7dc;
+    border: none;
+    margin-bottom: 2rem;
+    padding: 20px;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+    box-shadow: 0px 1px 2px 0px #d8d8d8;
+}
+
+/* --------------------Side-Bar---------------- */
 .sidebar {
     margin-left: 2px;
     background-color: #003049;
@@ -19,7 +47,7 @@ html {
     height: 100vh;
     padding: 20px;
     width: 20%;
-    overflow: hidden;
+    font-weight: 400;
     position: fixed;
     display: flex;
     justify-content: flex-start;
@@ -29,7 +57,6 @@ html {
 }
 
 .sidebar h2 {
-    color: #fff7e8;
     margin: 1rem 0px 1rem 0px;
 }
 
@@ -41,49 +68,24 @@ html {
     color: #d5d5d5;
 }
 
-#line {
+.sidebar ul li {
+    margin: 20px 0;
+}
+
+.line {
     margin-top: auto;
     border-top: 1px solid #fffdfd;
 }
 
 .logout {
-    font-weight: bold;
-}
-
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-.sidebar ul li {
-    margin: 20px 0;
-}
-
-.sidebar ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.sidebar .logout {
-    color: white;
     display: block;
     margin-top: 20px;
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
 }
 
-/* ------------------- */
-
-.project-card {
-    background-color: #f8f7f7dc;
-    border: none;
-    margin-bottom: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
-}
+/* -----------------Project-List----------------- */
 
 .expand-btn {
     margin-top: 0.5rem;
@@ -97,13 +99,33 @@ html {
 
 .expand-btn:hover {
     background-color: #c1121f;
+    color: #000000;
 }
 
-.employee-list {
-    margin-top: 10px;
+.add{
+    padding: .5rem;
+    font-size: 0.8rem;
+    color: #fcfcfcf8;
+    background-color: #002f49ee;
+    border: none;
 }
 
-/* ---------------------------------- */
+.add:hover {
+    background-color: #003049;
+    color: #ffffff;
+}
+
+.pro {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: baseline;
+    margin-bottom: 1rem;
+
+}
+
+
+/* ----------------Content Container------------------ */
 
 .main-content {
     display: flex;
@@ -115,7 +137,12 @@ html {
     padding: 40px;
 }
 
-.srch {
+/* --------------manager-------------------- */
+.gap {
+    margin-bottom: 2rem;
+}
+
+/* .srch {
     border-radius: 1rem;
     border: 2rem;
     box-shadow: 0px 0px 4px 0px #000000;
@@ -146,35 +173,46 @@ html {
     flex-grow: 1;
     padding: 10px;
     margin-right: 10px;
-}
+} */
 
+/* -------------------Filter-Bar------------------ */
 
 .filter-bar {
     display: flex;
     justify-content: space-around;
-    margin-bottom: 20px;
+    margin-bottom: 4%;
 }
 
 .filter-bar button {
-    padding: 10px 10px;
     text-decoration: none;
-    font-size: 1rem;
     border: none;
     background-color: transparent;
+    font-size: 1rem;
     font-weight: 540;
 }
 
 .filter-bar button:hover {
     transform: translateY(-5px);
-    color: #003566;
+    color: #0175b4;
 }
 
-/* --------------------------- */
-.request-list{
-    display: flex;
-    flex-direction: column;
+/* ------------Request-Card--------------- */
+
+td {
+    width: 42%;
 }
-.employee-list {
+           
+/* --------Employee-Card,details,actions,lst------ */
+
+
+.employee-card .details {
+    display: flex;
+    font-size: larger;
+    justify-content: space-between;
+    flex-direction: row;
+}
+
+.employee-card .actions {
     display: flex;
     flex-direction: column;
 }
@@ -184,66 +222,30 @@ html {
     font-weight: 700;
 }
 
-.request-card{
-    background-color: #f8f7f7dc;
-    border: 1px solid #ddd;
-    margin-bottom: 10px;
-    padding: 20px;
+.employee-card .actions .lst {
     display: flex;
     justify-content: space-between;
-    flex-direction: column;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
+    align-items: baseline;
 }
 
-.employee-card  {
-    background-color: #f8f7f7dc;
-    border: none;
-    margin-bottom: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
-}
-
-.employee-card .details {
-    display: flex;
-    font-size: larger;
-    justify-content: space-between;
-    flex-direction: row;
-}
-.request-card .details{
-    display: flex;
-    font-size: larger;
-    justify-content: space-between;
-    flex-direction: row;
-}
-.employee-card .actions .request-card .actions{
-    display: flex;
-    flex-direction: column;
-}
-
-
-.lst {
-    display: flex;
-    justify-content: space-between;
-}
-
-.employee-card .actions button,
-.employee-card .actions i {
-    padding: .5rem;
-    color: #e4e4e4;
-    background-color: #003049;
-    border: 2rem;
-    box-shadow: 0px 0px 1.8px 0px #000000;
-}
-
-.lst button:hover {
+.employee-card .actions .lst button:hover {
     background-color: #003566f2;
     color: #fffffff3;
 }
 
-/* ------------------------------- */
+.employee-list {
+    display: flex;
+    flex-direction: column;
+}
+
+.employee-card .actions button,.actions i {
+    padding: .5rem;
+    color: #e4e4e4;
+    background-color: #003049;
+    border: none;
+}
+
+/* ---------------Message---------------- */
 
 .message {
     margin-top: 20px;
@@ -260,6 +262,8 @@ html {
     background-color: #f44336;
     color: white;
 }
+
+/* --------------Add Employe Modal ----------------------- */
 
 .modal {
     display: none;
