--- a/webPage/employee/styles.css
+++ b/webPage/employee/styles.css
@@ -1,7 +1,10 @@
+/* -----------Whole Html--------------------- */
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    list-style-type: none;
 }
 
 body {
@@ -12,7 +15,19 @@ html {
     scroll-behavior: smooth;
 }
 
-/* --------------------------------- */
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+h3 {
+    font-size: 1.3rem;
+    margin-bottom: 1.3%;
+    font-weight: 700;
+}
+
+
+/* --------------------Side-Bar---------------- */
 
 
 .sidebar {
@@ -23,7 +38,6 @@ html {
     padding: 20px;
     width: 20%;
     box-shadow: 0 0 1rem rgba(0, 0, 0, .5);
-    overflow: hidden;
     position: fixed;
     display: flex;
     justify-content: flex-start;
@@ -33,7 +47,6 @@ html {
 }
 
 .sidebar h2 {
-    color: #fff7e8;
     margin: 1rem 0px 1rem 0px;
 }
 
@@ -45,45 +58,25 @@ html {
     color: #d5d5d5;
 }
 
-#line {
-    margin-top: auto;
-    border-top: 1px solid #fffdfd;
-}
-
-.logout {
-    font-weight: bold;
-}
-
-.sidebar ul {
-    list-style-type: none;
-    padding: 0;
-}
-
 .sidebar ul li {
     margin: 20px 0;
 }
 
-.sidebar ul li a {
-    color: white;
-    text-decoration: none;
-}
-
-.sidebar .profile {
-    color: white;
-    text-decoration: none;
+.line {
+    margin-top: auto;
+    border-top: 1px solid #fffdfd;
 }
 
 .sidebar .logout {
-    color: white;
     display: block;
     margin-top: 20px;
     text-align: center;
     text-decoration: none;
+    font-weight: bold;
 }
 
 
-/* ------------------------------------------ */
-
+/* ---------------Content Container------------- */
 
 .main-content {
     display: flex;
@@ -95,16 +88,12 @@ html {
     padding: 40px;
 }
 
-.main-content h3 {
-    font-size: 1.3rem;
-    margin-bottom: 1.3%;
-    font-weight: 700;
-}
+/* ----------------Card-Container---------------- */
 
-#home-page {
+.card {
     background-color: #f8f7f7dc;
     border: none;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -112,16 +101,7 @@ html {
     box-shadow: 0px 1px 2px 0px #d8d8d8;
 }
 
-
-/* ----------------------- */
-
-.details {
-    background-color: #f8f7f7dc;
-    border: none;
-    margin-bottom: 10px;
-    padding: 20px;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
-}
+/* ---------------------Employee-list------------ */
 
 .employee-list {
     display: flex;
@@ -129,20 +109,7 @@ html {
     flex-direction: column;
 }
 
-/* --------------------------- */
-
-#profile-details {
-    background-color: #f8f7f7dc;
-    border: none;
-    margin-bottom: 10px;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    flex-direction: column;
-    box-shadow: 0px 1px 2px 0px #d8d8d8;
-}
-
-/* ------------------------------ */
+/* ---------------Message--------------- */
 
 .message {
     margin-top: 20px;
@@ -160,6 +127,9 @@ html {
     color: white;
 }
 
+
+/* ------------Modal------------ */
+
 .modal {
     display: none;
     position: fixed;
@@ -169,8 +139,8 @@ html {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
     padding-top: 60px;
 }
 
